--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dis-edu",
+  "name": "db-IO25-theme3",
   "version": "2.1.0",
   "main": "index.js",
   "description": "Databases course work template",
