--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.1.0",
   "main": "index.js",
   "description": "Databases course work template",
-  "repository": "https://github.com/IO25SavelievArtem/db-IO25-theme3",
+  "repository": "https://github.com/dimahlynchak/db-IO25-theme3",
   "author": "IO-25 Group 3",
   "license": "ECL 2.0",
   "scripts": {
@@ -14,7 +14,9 @@
   "dependencies": {
     "@vuepress/plugin-back-to-top": "^1.7.1",
     "@vuepress/plugin-pwa": "^1.7.1",
-    "vuepress": "^1.7.1",
+    "vuepress": "^1.7.1"
+  },
+  "devDependencies": {
     "vuepress-theme-cool": "^1.3.1"
   }
 }
